Updating version & Release notes

--- a/src/Orbyss.Components.Json.Models.csproj
+++ b/src/Orbyss.Components.Json.Models.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<PackageId>Orbyss.Components.Json.Models</PackageId>
 		<Authors>Orbyss.io</Authors>
 		<Company>Orbyss</Company>
@@ -21,7 +21,7 @@
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 
-		<PackageReleaseNotes>Initial release. Includes core shared types for schema-based UI generation in Blazor.</PackageReleaseNotes>
+		<PackageReleaseNotes>Second release: patch including translation sections used to fetch particular sections in a translation schema.</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
